header middle --searchfield

--- a/src/header.css
+++ b/src/header.css
@@ -13,3 +13,22 @@
   display: flex;
   align-items: center;
 }
+.header__middle {
+  display: flex;
+  align-items: center;
+  flex: 0.7;
+  background-color: whitesmoke;
+  padding: 10px;
+  border-radius: 5px;
+}
+.header__middle > .MuiSvgIcon-root {
+  color: gray;
+}
+.header__middle > input {
+  border: none;
+  width: 100%;
+  padding: 10px;
+  outline-width: 0;
+  font-size: medium;
+  background-color: transparent;
+}
