--- a/src/emailList.css
+++ b/src/emailList.css
@@ -12,3 +12,11 @@
   z-index: 999;
   padding-right: 10px;
 }
+.emailList__sections {
+  position: sticky;
+  top: 0;
+  display: flex;
+  border-bottom: 1px solid whitesmoke;
+  background-color: white;
+  z-index: 999;
+}
