--- a/src/sidebar.css
+++ b/src/sidebar.css
@@ -1,3 +1,8 @@
+.sidebar {
+  flex: 0.3;
+  max-width: 300px;
+  padding-right: 20px;
+}
 .sidebar__compose {
   margin-left: 15px !important;
   margin-bottom: 15px !important;
