--- a/src/emailrow.css
+++ b/src/emailrow.css
@@ -11,3 +11,21 @@
   border-top: 1px solid whitesmoke;
   box-shadow: 0px 4px 4px -2px rgba(0, 0, 0, 0.24);
 }
+.emailRow__options {
+  display: flex;
+}
+
+.emailRow__message {
+  display: flex;
+  flex: 0.8;
+  align-items: center;
+  font-size: 13px;
+}
+.emailRow__message > h4 {
+  width: 400px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  padding-left: 5px;
+  padding-right: 5px;
+}
