--- a/src/mail.css
+++ b/src/mail.css
@@ -1,3 +1,6 @@
+* {
+  overflow: hidden;
+}
 .mail {
   flex: 1;
   background-color: whitesmoke;
@@ -10,4 +13,13 @@
 }
 .mail__toolsLeft {
   display: flex;
+}
+.mail__body {
+  display: flex;
+  flex-direction: column;
+  margin: 30px;
+  background-color: white;
+  padding: 20px;
+  height: 100vh;
+  box-shadow: 0px 5px 7px 0px rgba(0, 0, 0, 0.24);
 }
